--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="main-card">
                     <header>
-                        
+                        <div class="btn btn-upgrade"><a href="#">EFFETTUA L'UPGRADE</a></div>
                     </header>
                     <div class="main-content">    
                                   
