--- a/index.html
+++ b/index.html
@@ -23,11 +23,54 @@
         <div class="wrapper">
             <main>
                 <div class="side-bar">
-                    
+                    <!-- logo spotify -->
+                    <div class="logo">
+                        <a href="#"><img src="img/logo-small.svg" alt="logo sm"></a>
+                        <a href="#"><img src="img/logo.svg" alt="logo"></a>
+                    </div>
+                    <!-- sidebar nav icon -->
+                    <div class="nav-top">
+                        <ul>
+                            <li><a href="#"><img src="img/home.svg" alt="icon home"><h4>Home</h4></a></li>
+                            <li><a href="#"><img src="img/search.svg" alt="icon search"><h4>Cerca</h4></a></li>
+                            <li><a href="#"><img src="img/libreria.svg" alt="icon library"><h4>La tua libreria</h4></a></li>
+                        </ul>
+                    </div>
+                    <!-- playlist -->
+                    <div class="playlist">
+                        <div class="to-hide">
+                            <h2>PLAYLIST</h2>
+                            <div class="create-playlist">
+                                <i class="fa-solid fa-square-plus"></i>
+                                <span>Crea Playlist</span>
+                            </div>
+                            <ul>
+                                <li><a href="#">Nome Playlist</a></li>
+                                <li><a href="#">Nome Playlist</a></li>
+                                <li><a href="#">Nome Playlist</a></li>
+                                <li><a href="#">Nome Playlist</a></li>
+                                <li><a href="#">Nome Playlist</a></li>
+                                <li><a href="#">Nome Playlist</a></li>
+                                <li><a href="#">Nome Playlist</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- account footer side-bar -->
+                     <div class="account">
+                        <div class="install">
+                            <a href="#"><img src="img/download.svg" alt=""></a>
+                            <a href="#">Installa app</a>
+                        </div>
+                        <div class="border-account"></div>
+                        <div class="user">
+                            <a href="#"><img src="img/profile.svg" alt=""></a>
+                            <a href="#"><h3>John Doe</h3></a>
+                        </div>
+                     </div>
                 </div>
                 <div class="main-card">
                     <header>
-                        <div class="btn btn-upgrade"><a href="#">EFFETTUA L'UPGRADE</a></div>
+                        <div class="btn btn-upgrade"><a href="#">EFFETUA L'UPGRADE</a></div>
                     </header>
                     <div class="main-content">    
                                   
