added main top nav bar

--- a/index.html
+++ b/index.html
@@ -70,10 +70,21 @@
                 </div>
                 <div class="main-card">
                     <header>
+                        <!-- button for upgrade -->
                         <div class="btn btn-upgrade"><a href="#">EFFETUA L'UPGRADE</a></div>
                     </header>
-                    <div class="main-content">    
-                            
+                    <div class="main-content"> 
+                            <!-- top nav-bar    -->
+                            <nav>
+                              <ul>
+                                <li><a href="#">IN EVIDENZA</a></li>
+                                <li><a href="#">PODCAST</a></li>
+                                <li><a href="#">CLASSIFICHE</a></li>
+                                <li><a href="#">GENERI E MOOD</a></li>
+                                <li><a href="#">NUOVE USCITE</a></li>
+                                <li><a href="#">SCOPRI</a></li>
+                              </ul>  
+                            </nav>
                     </div>
                 </div>
             </main>
