--- a/index.html
+++ b/index.html
@@ -85,6 +85,35 @@
                                 <li><a href="#">SCOPRI</a></li>
                               </ul>  
                             </nav>
+                            <!-- row recently played -->
+                            <section id="recently">
+                                <h2></h2>
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="box-img"><img src="" alt=""></div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="box-img"><img src="" alt=""></div>
+
+                                    </div>
+                                    <div class="col">
+                                        <div class="box-img"><img src="" alt=""></div>
+
+                                    </div>
+                                    <div class="col">
+                                        <div class="box-img"><img src="" alt=""></div>
+
+                                    </div>
+                                    <div class="col">
+                                        <div class="box-img"><img src="" alt=""></div>
+
+                                    </div>
+                                    <div class="col">
+                                        <div class="box-img"><img src="" alt=""></div>
+
+                                    </div>
+                                </div>
+                            </section>
                     </div>
                 </div>
             </main>
