added section recently played + fixed structure section main

--- a/index.html
+++ b/index.html
@@ -87,32 +87,51 @@
                             </nav>
                             <!-- row recently played -->
                             <section id="recently">
-                                <h2></h2>
-                                <div class="row">
+                                <h2>Recently played</h2>
+                                <figure class="row">
                                     <div class="col">
-                                        <div class="box-img"><img src="" alt=""></div>
+                                        <img src="img/metal_lifting.jpg" alt="metal">
+                                        <figcaption>
+                                            <h3>Heavy Metal</h3>
+                                            <h4>Subtitile</h4>
+                                        </figcaption>
                                     </div>
                                     <div class="col">
-                                        <div class="box-img"><img src="" alt=""></div>
-
+                                        <img src="img/stranger.jpeg" alt="stranger">
+                                        <figcaption>
+                                            <h3>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h3>
+                                            <h4>Subtitile</h4>
+                                        </figcaption>
                                     </div>
                                     <div class="col">
-                                        <div class="box-img"><img src="" alt=""></div>
-
+                                        <img src="img/aquietplace.jpeg" alt="A quuiet place">
+                                        <figcaption>
+                                            <h3>A quiet place</h3>
+                                            <h4>Subtitile</h4>
+                                        </figcaption>
                                     </div>
                                     <div class="col">
-                                        <div class="box-img"><img src="" alt=""></div>
-
+                                        <img src="img/split.jpeg" alt="split">
+                                        <figcaption>
+                                            <h3>Split</h3>
+                                            <h4>Subtitile</h4>
+                                        </figcaption>
                                     </div>
                                     <div class="col">
-                                        <div class="box-img"><img src="" alt=""></div>
-
+                                        <img src="img/cure.jpeg" alt="cure">
+                                        <figcaption>
+                                            <h3>A cure for wellness</h3>
+                                            <h4>Subtitile</h4>
+                                        </figcaption>
                                     </div>
                                     <div class="col">
-                                        <div class="box-img"><img src="" alt=""></div>
-
+                                        <img src="img/sinister.jpeg" alt="sinister">
+                                        <figcaption>
+                                            <h3>Sinister</h3>
+                                            <h4>Subtitile</h4>
+                                        </figcaption>
                                     </div>
-                                </div>
+                                </figure>
                             </section>
                     </div>
                 </div>
