added footer layout responsive

--- a/index.html
+++ b/index.html
@@ -74,111 +74,155 @@
                         <div class="btn btn-upgrade"><a href="#">EFFETUA L'UPGRADE</a></div>
                     </header>
                     <div class="main-content">
-                            <!-- top nav-bar    -->
-                            <nav>
-                              <ul>
-                                <li><a href="#">IN EVIDENZA</a></li>
-                                <li><a href="#">PODCAST</a></li>
-                                <li><a href="#">CLASSIFICHE</a></li>
-                                <li><a href="#">GENERI E MOOD</a></li>
-                                <li><a href="#">NUOVE USCITE</a></li>
-                                <li><a href="#">SCOPRI</a></li>
-                              </ul>
-                            </nav>
-                            <!-- row recently played -->
-                            <section id="recently">
-                                <!-- title of the section -->
-                                <h2>Recently played</h2>
-                                <figure class="row">
-                                    <div class="col">
-                                        <a href="#"><img src="img/metal_lifting.jpg" alt="metal"></a>                       
-                                        <div class="info-cont">
-                                            <a href="#"><h3>Heavy Metal</h3></a>
-                                            <a href="#"><h4>Subtitile</h4></a>
-                                        </div>
+                        <!-- top nav-bar    -->
+                        <nav>
+                        <ul>
+                            <li><a href="#">IN EVIDENZA</a></li>
+                            <li><a href="#">PODCAST</a></li>
+                            <li><a href="#">CLASSIFICHE</a></li>
+                            <li><a href="#">GENERI E MOOD</a></li>
+                            <li><a href="#">NUOVE USCITE</a></li>
+                            <li><a href="#">SCOPRI</a></li>
+                        </ul>
+                        </nav>
+                        <!-- row recently played -->
+                        <section id="recently">
+                            <!-- title of the section -->
+                            <h2>Recently played</h2>
+                            <figure class="row">
+                                <div class="col">
+                                    <a href="#"><img src="img/metal_lifting.jpg" alt="metal"></a>                       
+                                    <div class="info-cont">
+                                        <a href="#"><h3>Heavy Metal</h3></a>
+                                        <a href="#"><h4>Subtitile</h4></a>
                                     </div>
-                                    <div class="col">
-                                        <a href="#"><img src="img/stranger.jpeg" alt="stranger"></a>
-                                        <div class="info-cont">
-                                            <a href="#"><h3>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h3></a>
-                                            <a href="#"><h4>Subtitile</h4></a>
-                                        </div>
+                                </div>
+                                <div class="col">
+                                    <a href="#"><img src="img/stranger.jpeg" alt="stranger"></a>
+                                    <div class="info-cont">
+                                        <a href="#"><h3>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h3></a>
+                                        <a href="#"><h4>Subtitile</h4></a>
                                     </div>
-                                    <div class="col">
-                                        <a href="#"><img src="img/aquietplace.jpeg" alt="A quuiet place"></a>
-                                        <div class="info-cont">
-                                            <a href="#"><h3>A quiet place</h3></a>
-                                            <a href="#"><h4>Subtitile</h4></a>
-                                        </div>
+                                </div>
+                                <div class="col">
+                                    <a href="#"><img src="img/aquietplace.jpeg" alt="A quuiet place"></a>
+                                    <div class="info-cont">
+                                        <a href="#"><h3>A quiet place</h3></a>
+                                        <a href="#"><h4>Subtitile</h4></a>
                                     </div>
-                                    <div class="col">
-                                        <a href="#"><img src="img/split.jpeg" alt="split"></a>
-                                        <div class="info-cont">
-                                            <a href="#"><h3>Split</h3></a>
-                                            <a href="#"><h4>Subtitile</h4></a>
-                                        </div>
+                                </div>
+                                <div class="col">
+                                    <a href="#"><img src="img/split.jpeg" alt="split"></a>
+                                    <div class="info-cont">
+                                        <a href="#"><h3>Split</h3></a>
+                                        <a href="#"><h4>Subtitile</h4></a>
                                     </div>
-                                    <div class="col">
-                                        <a href="#"><img src="img/cure.jpeg" alt="cure"></a>
-                                        <div class="info-cont">
-                                            <a href="#"><h3>A cure for wellness</h3></a>
-                                            <a href="#"><h4>Subtitile</h4></a>
-                                        </div>
+                                </div>
+                                <div class="col">
+                                    <a href="#"><img src="img/cure.jpeg" alt="cure"></a>
+                                    <div class="info-cont">
+                                        <a href="#"><h3>A cure for wellness</h3></a>
+                                        <a href="#"><h4>Subtitile</h4></a>
                                     </div>
-                                    <div class="col">
-                                        <a href="#"><img src="img/sinister.jpeg" alt="sinister"></a>
-                                        <div class="info-cont">
-                                            <a href="#"><h3>Sinister</h3></a>
-                                            <a href="#"><h4>Subtitile</h4></a>
-                                        </div>
+                                </div>
+                                <div class="col">
+                                    <a href="#"><img src="img/sinister.jpeg" alt="sinister"></a>
+                                    <div class="info-cont">
+                                        <a href="#"><h3>Sinister</h3></a>
+                                        <a href="#"><h4>Subtitile</h4></a>
                                     </div>
-                                </figure>
-                            </section>
-                            <!-- row playlist created for the user -->
-                            <section id="user-mix">
-                                <!-- title of the section -->
-                                <h2>Creato per John doe</h2>
-                                <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                                <figure class="row">
-                                    <div class="col">
-                                        <a href="#"><img src="img/radar.jpeg" alt="radar"></a>                       
-                                        <div class="info-cont">
-                                            <a href="#"><h3>Release Radar</h3></a>
-                                        </div>
+                                </div>
+                            </figure>
+                        </section>
+                        <!-- row playlist created for the user -->
+                        <section id="user-mix">
+                            <!-- title of the section -->
+                            <h2>Creato per John doe</h2>
+                            <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                            <figure class="row">
+                                <div class="col">
+                                    <a href="#"><img src="img/radar.jpeg" alt="radar"></a>                       
+                                    <div class="info-cont">
+                                        <a href="#"><h3>Release Radar</h3></a>
                                     </div>
-                                    <div class="col">
-                                        <a href="#"><img src="img/mixdaily.jpeg" alt="daily"></a>                       
-                                        <div class="info-cont">
-                                            <a href="#"><h3>Daily Mix 1</h3></a>                                        </div>
+                                </div>
+                                <div class="col">
+                                    <a href="#"><img src="img/mixdaily.jpeg" alt="daily"></a>                       
+                                    <div class="info-cont">
+                                        <a href="#"><h3>Daily Mix 1</h3></a>                                        </div>
+                                </div>
+                            </figure> 
+                        </section>
+                        <!-- row playlist popular artists -->
+                        <section id="popular">
+                            <!-- title of the section -->
+                            <h2>Artisti più popolari</h2>
+                            <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                            <figure class="row">
+                                <div class="col">
+                                    <a href="#"><img src="img/youg.jpeg" alt="del Rey"></a>                       
+                                    <div class="info-cont">
+                                        <a href="#"><h3>Lana del Rey</h3></a>
                                     </div>
-                                </figure> 
-                            </section>
-                            <!-- row playlist popular artists -->
-                            <section id="popular">
-                                <!-- title of the section -->
-                                <h2>Artisti più popolari</h2>
-                                <p>Più ascolti, più accurati saranno i suggerimenti.</p>
-                                <figure class="row">
-                                    <div class="col">
-                                        <a href="#"><img src="img/youg.jpeg" alt="del Rey"></a>                       
-                                        <div class="info-cont">
-                                            <a href="#"><h3>Lana del Rey</h3></a>
-                                        </div>
-                                    </div>
-                                    <div class="col">
-                                        <a href="#"><img src="img/einaudi.jpeg" alt="einaudi"></a>                       
-                                        <div class="info-cont">
-                                            <a href="#"><h3>Ludovico Einaudi</h3></a>                                        </div>
-                                    </div>
-                                </figure>
-                               
-                            </section>
-
+                                </div>
+                                <div class="col">
+                                    <a href="#"><img src="img/einaudi.jpeg" alt="einaudi"></a>                       
+                                    <div class="info-cont">
+                                        <a href="#"><h3>Ludovico Einaudi</h3></a>                                        </div>
+                                </div>
+                            </figure> 
+                        </section>
                     </div>
                 </div>
             </main>
+            <!-- footer spotify console -->
             <footer>
+                <div class="row">
+                    <div class="col-left">
+                        <div class="box-img"><img src="" alt=""></div>
+                        <div class="song">
+                            <h4></h4>
+                            <ul class="song-info">
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
+                        <div class="btn-row-left">
+                            
+                        </div> 
+                    </div>
+                    <div class="col-mid">
+                        <div class="console">
+                            <div class="btn"></div>
+                            <div class="btn"></div>
+                            <div class="btn"></div>
+                            <div class="btn"></div>
+                            <div class="btn"></div>
+                        </div>
+                        <div class="time-box">
+                            <div class="current-time"></div>
+                            <div class="time-bar">
+                                <div class="total-timebar">
+                                    <div class="now-timebar"></div>
+                                </div>
+                            </div>
+                            <div class="time-song"></div>
+                        </div>
+                    </div>
+                    <div class="col-right">
+                        <ul>
+                            <li><img src="" alt=""></li>
+                            <li><img src="" alt=""></li>
+                            <li><img src="" alt=""></li>
+                            <li>
+                                <div class="volume">
+                                    <div class="volume-current"></div>
+                                </div>
+                            </li>
+                        </ul>
 
+                    </div>
+                </div>
             </footer>
         </div>
     </body>
