--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <body>
         <div class="wrapper">
             <main>
+                <!-- sidebar -->
                 <div class="side-bar">
                     <!-- logo spotify -->
                     <div class="logo">
@@ -36,7 +37,7 @@
                             <li><a href="#"><img src="img/libreria.svg" alt="icon library"><h4>La tua libreria</h4></a></li>
                         </ul>
                     </div>
-                    <!-- playlist -->
+                    <!-- sidebar playlist -->
                     <div class="playlist">
                         <div class="to-hide">
                             <h2>PLAYLIST</h2>
@@ -55,7 +56,7 @@
                             </ul>
                         </div>
                     </div>
-                    <!-- account footer side-bar -->
+                    <!-- sidebar account footer side-bar -->
                      <div class="account">
                         <div class="install">
                             <a href="#"><img src="img/download.svg" alt=""></a>
@@ -64,7 +65,7 @@
                         <div class="border-account"></div>
                         <div class="user">
                             <a href="#"><img src="img/profile.svg" alt=""></a>
-                            <a href="#"><h3>John Doe</h3></a>
+                            <a href="#"><h3>Jerome Maligaya</h3></a>
                         </div>
                      </div>
                 </div>
@@ -91,42 +92,42 @@
                             <h2>Recently played</h2>
                             <figure class="row">
                                 <div class="col">
-                                    <a href="#"><img src="img/metal_lifting.jpg" alt="metal"></a>                       
+                                    <a href="#"><div class="box-img"><img src="img/metal_lifting.jpg" alt="metal"></div></a>                       
                                     <div class="info-cont">
                                         <a href="#"><h3>Heavy Metal</h3></a>
                                         <a href="#"><h4>Subtitile</h4></a>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <a href="#"><img src="img/stranger.jpeg" alt="stranger"></a>
+                                    <a href="#"><div class="box-img"><img src="img/stranger.jpeg" alt="stranger"></div></a>
                                     <div class="info-cont">
                                         <a href="#"><h3>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h3></a>
                                         <a href="#"><h4>Subtitile</h4></a>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <a href="#"><img src="img/aquietplace.jpeg" alt="A quuiet place"></a>
+                                    <a href="#"><div class="box-img"><img src="img/aquietplace.jpeg" alt="A quiet place"></div></a>
                                     <div class="info-cont">
                                         <a href="#"><h3>A quiet place</h3></a>
                                         <a href="#"><h4>Subtitile</h4></a>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <a href="#"><img src="img/split.jpeg" alt="split"></a>
+                                    <a href="#"><div class="box-img"><img src="img/split.jpeg" alt="split"></div></a>
                                     <div class="info-cont">
                                         <a href="#"><h3>Split</h3></a>
                                         <a href="#"><h4>Subtitile</h4></a>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <a href="#"><img src="img/cure.jpeg" alt="cure"></a>
+                                    <a href="#"><div class="box-img"><img src="img/cure.jpeg" alt="cure"></div></a>
                                     <div class="info-cont">
                                         <a href="#"><h3>A cure for wellness</h3></a>
                                         <a href="#"><h4>Subtitile</h4></a>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <a href="#"><img src="img/sinister.jpeg" alt="sinister"></a>
+                                    <a href="#"><div class="box-img"><img src="img/sinister.jpeg" alt="sinister"></div></a>
                                     <div class="info-cont">
                                         <a href="#"><h3>Sinister</h3></a>
                                         <a href="#"><h4>Subtitile</h4></a>
@@ -137,19 +138,20 @@
                         <!-- row playlist created for the user -->
                         <section id="user-mix">
                             <!-- title of the section -->
-                            <h2>Creato per John doe</h2>
+                            <h2>Creato per Jerome Maligaya</h2>
                             <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                             <figure class="row">
                                 <div class="col">
-                                    <a href="#"><img src="img/radar.jpeg" alt="radar"></a>                       
+                                    <a href="#"><div class="box-img"><img src="img/radar.jpeg" alt="radar"></div></a>                       
                                     <div class="info-cont">
                                         <a href="#"><h3>Release Radar</h3></a>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <a href="#"><img src="img/mixdaily.jpeg" alt="daily"></a>                       
+                                    <a href="#"><div class="box-img"><img src="img/mixdaily.jpeg" alt="daily"></div></a>                   
                                     <div class="info-cont">
-                                        <a href="#"><h3>Daily Mix 1</h3></a>                                        </div>
+                                        <a href="#"><h3>Daily Mix 1</h3></a>                                        
+                                    </div>
                                 </div>
                             </figure> 
                         </section>
@@ -160,15 +162,16 @@
                             <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                             <figure class="row">
                                 <div class="col">
-                                    <a href="#"><img src="img/youg.jpeg" alt="del Rey"></a>                       
+                                    <a href="#"><div class="box-img"><img src="img/youg.jpeg" alt="del Rey"></div></a>                       
                                     <div class="info-cont">
                                         <a href="#"><h3>Lana del Rey</h3></a>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <a href="#"><img src="img/einaudi.jpeg" alt="einaudi"></a>                       
+                                    <a href="#"><div class="box-img"><img src="img/einaudi.jpeg" alt="einaudi"></div></a>                    
                                     <div class="info-cont">
-                                        <a href="#"><h3>Ludovico Einaudi</h3></a>                                        </div>
+                                        <a href="#"><h3>Ludovico Einaudi</h3></a>                                        
+                                    </div>
                                 </div>
                             </figure> 
                         </section>
@@ -179,45 +182,42 @@
             <footer>
                 <div class="row">
                     <div class="col-left">
-                        <div class="box-img"><img src="" alt=""></div>
+                        <div class="box-img"><img src="img/sinister.jpeg" alt="sinister"></div>
                         <div class="song">
-                            <h4></h4>
+                            <h4>Sinister</h4>
                             <ul class="song-info">
-                                <li></li>
-                                <li></li>
+                                <li>Brano</li>
+                                <li>Nome</li>
                             </ul>
                         </div>
                         <div class="btn-row-left">
-                            
-                        </div> 
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-regular fa-folder"></i>
+                        </div>
                     </div>
                     <div class="col-mid">
                         <div class="console">
-                            <div class="btn"></div>
-                            <div class="btn"></div>
-                            <div class="btn"></div>
-                            <div class="btn"></div>
-                            <div class="btn"></div>
+                            <div class="btn"><i class="fa-solid fa-shuffle"></i></div>
+                            <div class="btn"><i class="fa-solid fa-backward-step"></i></div>
+                            <div class="btn"><i class="fa-regular fa-circle-play"></i></div>
+                            <div class="btn"><i class="fa-solid fa-forward-step"></i></div>
+                            <div class="btn"><i class="fa-solid fa-rotate-right"></i></div>
                         </div>
                         <div class="time-box">
-                            <div class="current-time"></div>
+                            <div class="current-time">0:25</div>
                             <div class="time-bar">
-                                <div class="total-timebar">
-                                    <div class="now-timebar"></div>
-                                </div>
+                                <div class="timebar-current"></div>
                             </div>
-                            <div class="time-song"></div>
+                            <div class="time-song">4.35</div>
                         </div>
                     </div>
                     <div class="col-right">
                         <ul>
-                            <li><img src="" alt=""></li>
-                            <li><img src="" alt=""></li>
-                            <li><img src="" alt=""></li>
-                            <li>
-                                <div class="volume">
-                                    <div class="volume-current"></div>
-                                </div>
+                            <li><i class="fa-solid fa-list"></i></li>
+                            <li><i class="fa-solid fa-desktop"></i></li>
+                            <li><i class="fa-solid fa-volume-high"></i></li>
+                            <li class="volume">
+                                <div class="volume-current"></div>
                             </li>
                         </ul>
 
